--- a/.github/workflows/php-ci.yml
+++ b/.github/workflows/php-ci.yml
@@ -24,4 +24,5 @@ jobs:
         run: composer install --no-interaction --no-progress --prefer-dist
 
       - name: Run PHPUnit tests
-        run: vendor/bin/phpunit --testdox
+        run: vendor/bin/phpunit --testdox tests
+
